# infraestrutura-kafka-pd

./: .editorconfig  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
infraestrutura_kafka_pd/: config.py
infraestrutura_kafka_pd/consumer/: __init__.py  fraud_detector.py  main.py
infraestrutura_kafka_pd/consumer_to_db/: main.py
infraestrutura_kafka_pd/kafka_setup/: __init__.py  main.py
infraestrutura_kafka_pd/models/: models.py
infraestrutura_kafka_pd/producer/: __init__.py  main.py  transaction_generator.py  utils.py
infraestrutura_kafka_pd/schemas/: transaction.avsc
