[tool.poetry]
name = "infraestrutura-kafka-pd"
version = "0.1.0"
description = ""
authors = ["Natália Oliveira <nataliaferreiraoliveira1994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiokafka = "^0.12.0"
mimesis = "^18.0.0"
pydantic = "^2.10.6"
kafka-python = "^2.0.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
